; ModuleID = '/home/carl/AnghaBench/systemd/src/fuzz/extr_fuzz-journald-kmsg.c_LLVMFuzzerTestOneInput.c'
source_filename = "/home/carl/AnghaBench/systemd/src/fuzz/extr_fuzz-journald-kmsg.c_LLVMFuzzerTestOneInput.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @LLVMFuzzerTestOneInput(i32* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.TYPE_5__, align 4
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load i64, i64* %5, align 8
  %8 = icmp eq i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store i32 0, i32* %3, align 4
  br label %19

10:                                               ; preds = %2
  %11 = load i32*, i32** %4, align 8
  %12 = load i64, i64* %5, align 8
  %13 = call i32 @dummy_server_init(%struct.TYPE_5__* %6, i32* %11, i64 %12)
  %14 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %6, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i64, i64* %5, align 8
  %17 = call i32 @dev_kmsg_record(%struct.TYPE_5__* %6, i32 %15, i64 %16)
  %18 = call i32 @server_done(%struct.TYPE_5__* %6)
  store i32 0, i32* %3, align 4
  br label %19

19:                                               ; preds = %10, %9
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i32 @dummy_server_init(%struct.TYPE_5__*, i32*, i64) #1

declare dso_local i32 @dev_kmsg_record(%struct.TYPE_5__*, i32, i64) #1

declare dso_local i32 @server_done(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
